correct some text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Strade della città di Trento dedicate a donne e uomini</title>
+  <title>strade della città di Trento dedicate a donne e uomini</title>
   <meta charset="utf-8" />
  <meta property="og:image" content="img/screeeshot.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -137,27 +137,27 @@
 		<h4>Informazioni</h4>
 			<p></p>
 			
-			<p>Questo progetto è fortemente ispirato al progetto <a href="http://www.ulmapi.de/streetdudes/">Street Dudes</a> del <a target="_blank" href="http://www.ulmapi.de">datalove-Gruppe / UlmAPI</a> sviluppato all'interno della<a target="_blank" href="http://codeweek.eu/">CodeWeek.EU 2014</a> partendo dal loro codice sorgente disponibile su <a target="_blank" href="https://github.com/UlmApi/streetdudes">github</a></p>
+			<p>Questo progetto è fortemente ispirato al progetto <a href="http://www.ulmapi.de/streetdudes/">Street Dudes</a> del <a target="_blank" href="http://www.ulmapi.de">datalove-Gruppe / UlmAPI</a> sviluppato all'interno della <a target="_blank" href="http://codeweek.eu/">CodeWeek.EU 2014</a> partendo dal loro codice sorgente disponibile su <a target="_blank" href="https://github.com/UlmApi/streetdudes">github</a></p>
 		
 		<h4>Da dove nasce?</h4>
-			<p>L'idea nasce dopo aver preso visione di altri progetti analoghi in Europa su <a href="http://www.ulmapi.de/streetdudes/">Ulm</a>, <a href="http://editioneffet.ch/02776/?map">Zurigo, <a href="http://codeforkarlsruhe.github.io/streetnames/">Karlsruhe</a> e <a href="http://www.genderatlas.at/articles/strassennamen.html">Vienna</a><br/>Sulla spinta di <a href="http://www.wister.it/tag/flavia-marzano/">Flavia Marzano<a> e dallo stimolo dato consultando il sito <a href="http://toponomasticafemminile.com/">toponomastica femminile</a><br/>
-I dati vengono dallo stradario di <a href="http://www.openstreetmap.org">openstreetmap</a> (in particolare dal progetto degli <a href="http://osm-toolserver-italia.wmflabs.org/estratti/it/">estratti comunali</a> di Wikimedia Italia), confrontati con il <a href="http://www.comune.trento.it/Comune/Organizzazione-comunale/Amministrazione-trasparente/Altri-contenuti/Open-data/Dati-cartografici">grafo stradale</a> offerto dal <a href="http://www.comune.trento.it/">Comune di Trento</a><br/>
+			<p>L'idea nasce dopo aver preso visione di altri progetti analoghi in Europa su <a href="http://www.ulmapi.de/streetdudes/">Ulm</a>, <a href="http://editioneffet.ch/02776/?map">Zurigo, <a href="http://codeforkarlsruhe.github.io/streetnames/">Karlsruhe</a> e <a href="http://www.genderatlas.at/articles/strassennamen.html">Vienna</a><br/>Sulla spinta di <a href="https://twitter.com/flavia_marzano">Flavia Marzano<a> e dallo stimolo dato consultando il sito <a href="http://toponomasticafemminile.com/>toponomastica femminile</a><br/>
+I dati vengono dallo stradario di <a href="http://www.openstreetmap.org">openstreetmap</a> (in particolare dal progetto degli <a href="http://osm-toolserver-italia.wmflabs.org/estratti/it/">estratti comunali</a> di <a href="http://www.wikimedia.it/">Wikimedia Italia</a>), confrontati con il <a href="http://www.comune.trento.it/Comune/Organizzazione-comunale/Amministrazione-trasparente/Altri-contenuti/Open-data/Dati-cartografici">grafo stradale</a> offerto dal <a href="http://www.comune.trento.it/">Comune di Trento</a><br/>
 Per ciascuna voce è stato associato, dove possibile, un riferimento alla biografia della persona a cui è stata intitolata la strada.<br/>
 </p>
 
 		<h4>Note sui dati</h4>
 			<p>I dati sono stati elaborati a partire da quelli di openstreetmap in confronto con quelli del Comune di Trento.<br/> Questo ha anche permesso di aggiornare la toponomastica di Trento su openstreetmap.<br/>
-L'elenco e le geometrie delle strade dedicate a uomini e donne sono disponibili a questi indirizzi.<ul>
-<li></li>
-<li></li>
+L'elenco e le geometrie delle strade dedicate a uomini e donne sono disponibili a questi link:<ul>
+<li><a href="data/donne.geojson">strade dedicate a donne a Trento</a></li>
+<li><a href="data/uomini.geojson">strade dedicate a uomini a Trento</a></li>
 </ul>
-Essendo derivati da openstreetmap sono rilasciati con licenza <a href="http://opendatacommons.org/licenses/odbl/">ODbL</a>
-I</p>
-
+Si tratta di dati derivati da openstreetmap pertanto rilasciati con licenza <a href="http://opendatacommons.org/licenses/odbl/">ODbL</a>
+</p>
 		<h4>Contatti</h4>
 			<p>
 			Mail: napo (at) fbk.eu <br/>
 			Twitter: <a target="_blank" href="http://twitter.com/napo">@napo</a><br/>
+            <strong> si invita a segnalare eventuali incongruenze o cambiamenti da fare alla pagina su <a href="https://github.com/napo/strade_personaggi_trento">github</a></strong>
 			</p>
 	</div>
 
