--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
 <!--
 <link rel="stylesheet" href="http://labs.easyblog.it/maps/leaflet-search/src/leaflet-search.css" />
 -->
+<link href="http://c3js.org/css/c3-b03125fa.css" media="screen" rel="stylesheet" type="text/css" />
   <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet-src.js"></script>
 <!--
 <script src="http://labs.easyblog.it/maps/leaflet-search/src/leaflet-search.js"></script>
 -->
+<script src="http://c3js.org/js/d3-3.5.0.min-3b564392.js" type="text/javascript"></script>
+<script src="http://c3js.org/js/c3.min-12912fb6.js" type="text/javascript"></script>
   <script src="leaflet.label/leaflet.label.js"></script>
   <script src="leaflet-hash/leaflet-hash.js"></script>
   <script src="data/uomini.geojson" type="text/javascript"></script>
   <script src="data/donne.geojson" type="text/javascript"></script>
+
 
 
   <!-- fancybox -->
@@ -124,6 +128,10 @@
 		border:1px solid #0084b0;
 	}
 
+    #viz {
+        width: 200px;
+        height: 300px;
+    }
    </style>
 <script type="text/javascript">
 	$(document).ready(function() {
@@ -170,11 +178,11 @@ Si tratta di dati derivati da openstreetmap pertanto rilasciati con licenza <a h
 				<li id="Donna"><b>Donna</b></li>
 			</ul>
 	</div>
-<!--
 	<div class="logos">
+    <div id="viz"></div>
 		<a target="_blank" href="http://www.ulmapi.de"><img src="img/ulmapi.png" alt="ulmapi" title="Ein Projekt von datalove ulm / ulmAPI.de"></a>
 	</div>
--->
+
 
 	<div id="map"></div>
 
@@ -289,7 +297,37 @@ Si tratta di dati derivati da openstreetmap pertanto rilasciati con licenza <a h
 	
 	map.addControl( searchControl );  //inizialize search control
 */
+var totalstreets = 895;
+var totalwomen = 46;
+var totalmen = 319;
+var chart = c3.generate({
+    bindto: '#viz',
+    data: {
+      columns: [
+        ['donna', totalwomen],
+        ['uomo', totalmen],
+        ['altro', totalstreets-totalwomen-totalmen],
+      ],
+       type:'bar',
+       colors: {
+            donna: '#f1a340',
+            uomo: '#998ec3',
+            altro: '#cccccc'
+        },
+    },
+    axis: {
+        y: {
+            show: true,
+            label: 'strade dedicate a...'
+        }
+    },
+    tooltip: {
+        format: {
+            title: function (d) { return 'totale ' + totalstreets; }
 
+        }
+    }
+});
 	</script>
 
 </body>
