--- a/index.html
+++ b/index.html
@@ -156,10 +156,15 @@ Per ciascuna voce è stato associato, dove possibile, un riferimento alla biogra
 		<h4>Note sui dati</h4>
 			<p>I dati sono stati elaborati a partire da quelli di openstreetmap in confronto con quelli del Comune di Trento.<br/> Questo ha anche permesso di aggiornare la toponomastica di Trento su openstreetmap.<br/>
 L'elenco e le geometrie delle strade dedicate a uomini e donne sono disponibili a questi link:<ul>
-<li><a href="data/donne.geojson">strade dedicate a donne a Trento</a></li>
-<li><a href="data/uomini.geojson">strade dedicate a uomini a Trento</a></li>
+<li><a href="data/dati_donne.geojson">geometrie strade dedicate a donne a Trento (geojson)</a></li>
+<li><a href="data/dati_uomini.geojson">geometrie strade dedicate a uomini a Trento (geojson)</a></li>
+<li><a href="data/stradario_trento.csv">elenco strade di Trento (csv)</a></li>
+<li><a href="data/donne.csv">elenco strade di Trento dedicate a donne (csv)</a></li>
+<li><a href="data/uomini.csv">elenco strade di Trento dedicate a uomini (csv)</a></li>
 </ul>
-Si tratta di dati derivati da openstreetmap pertanto rilasciati con licenza <a href="http://opendatacommons.org/licenses/odbl/">ODbL</a>
+I dati in formato geojson sono dati derivati da openstreetmap pertanto rilasciati con licenza <a href="http://opendatacommons.org/licenses/odbl/">ODbL
+</a><br/>
+I restanti in <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0</a>
 </p>
 		<h4>Contatti</h4>
 			<p>
@@ -180,7 +185,7 @@ Si tratta di dati derivati da openstreetmap pertanto rilasciati con licenza <a h
 	</div>
 	<div class="logos">
     <div id="viz"></div>
-		<a target="_blank" href="http://www.ulmapi.de"><img src="img/ulmapi.png" alt="ulmapi" title="Ein Projekt von datalove ulm / ulmAPI.de"></a>
+		<!--<a target="_blank" href="http://www.ulmapi.de"><img src="img/ulmapi.png" alt="ulmapi" title="Ein Projekt von datalove ulm / ulmAPI.de"></a>-->
 	</div>
 
 
